<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ActivityDetail">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPict"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPict"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/detail_pict"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contentTitle"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/contentRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPict"
        tools:text="Title Content" />

    <TextView
        android:id="@+id/contentDate"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toStartOf="@+id/contentRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTitle"
        tools:text="Date" />

    <TextView
        android:id="@+id/contentRating"
        android:layout_width="54dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        app:drawableStartCompat="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toTopOf="@+id/tvOverview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPict"
        tools:text="7.5" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentDate"
        tools:text="@tools:sample/lorem/random" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPict"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>