<resources>
    <string name="app_name">CinemasApp</string>
    <string name="movies_banner">Movies</string>
    <string name="tv_show_banner">Tv Show</string>
    <string name="no_data_found">No Data Found</string>
    <string name="picture">picture_content</string>

    <string name="toast_text">Data Can\'t be Loaded</string>
    <string name="detail_pict">detailPict</string>
    <string name="favorite">Favorite</string>
</resources>